--- a/package.json
+++ b/package.json
@@ -4,22 +4,29 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint --quiet *.js **/*.js"
+    "lint": "eslint --quiet *.jsx **/*.jsx"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
     "react": "^0.14.7",
-    "react-dom": "^0.14.7"
+    "react-dom": "^0.14.7",
+    "react-sparklines": "^1.6.0",
+    "react-timestamp": "^3.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.5.1",
     "babel-loader": "^6.2.2",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
-    "webpack": "^1.12.13",
+    "css-loader": "^0.23.1",
     "eslint": "^3.10.2",
-    "eslint-plugin-react": "^6.7.1"
+    "eslint-plugin-react": "^6.7.1",
+    "foundation-sites": "^6.2.0",
+    "jquery": "^2.2.1",
+    "script-loader": "^0.6.1",
+    "style-loader": "^0.13.0",
+    "webpack": "^1.12.13"
   }
 }
